tests/integration/lifetime_inference/lifetime_error2.june
// error: can't find compatible lifetime between param 'stats' and param 'employee'

struct Stats {
    age: i64
}

struct Employee {
    name: c_string,
    stats: Stats,
}

fun helper(mut employee: Employee) {
    return helper2(employee, new Stats(age: 33))
}

fun helper2(mut employee: Employee, stats: Stats) {
    employee.stats = stats
}

fun main() {
    mut employee = new Employee(name: c"Sophia", stats: new Stats(age: 22))

    helper(employee)

    println(employee.stats.age)
}